inserindo erros swagger
