# backend/src/controllers/deletandoTarefasController.ts
@@ -8,7 +8,7 @@ export class DeletandoTarefasController {
             const service = new DeletandoTarefasService();
             const tarefa = await service.execute(id);
             if(typeof tarefa === 'string'){
-                return res.status(400).json({messageError: tarefa});
+                return res.status(404).json({messageError: tarefa});
             }
             return res.json({
                 message: "Tarefa deleta com sucesso",
